--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "praktikum",
   "version": "1.0.0",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build":  "rm -rf dist && webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -20,8 +19,16 @@
   "homepage": "https://github.com/DmitryKrivobok/mesto-project-ff#readme",
   "description": "",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3"
   }
 }
